--- a/index-rep.html
+++ b/index-rep.html
@@ -40,8 +40,8 @@
 </head>
 <body>
     <h2 style="text-align: center">NFP 121 - TP_injection</h2>
-    <h2 style="text-align: center">Injection de dépendances, Inversion de 
-    contrôle</h2>
+    <h2 style="text-align: center">Injection de dÃ©pendances, Inversion de 
+    contrÃ´le</h2>
     <br />
     <hr>
     <br />
@@ -53,7 +53,7 @@
             </td>
         </tr>
         <tr>
-            <td>Prénom
+            <td>PrÃ©nom
             </td>
             <td>...
             </td>
@@ -68,35 +68,35 @@
     <br />
     <hr />
     <h3>Question 1.1 :</h3>
-    Votre réponse...
+    Votre rÃ©ponse...
 
     <hr />
     <h3>Question 1.2 :</h3>
-    Votre réponse...
+    Votre rÃ©ponse...
 
     <hr />
     <h3>Question 2.1 :</h3>
-    Votre réponse...
+    Votre rÃ©ponse...
 
     <hr />
     <h3>Question 2.2 :</h3>
-    Votre réponse...
+    Votre rÃ©ponse...
 
     <br />
     <hr />
     <h3>Question 3 :</h3>
-    Votre réponse...
+    Votre rÃ©ponse...
 
     <br />
     <hr />
     <h3>Question 4 :</h3>
-    Votre réponse...
+    Votre rÃ©ponse...
 
     <br />
     <hr />
     
         <h3>Conclusion, biliographie et remarques :</h3>
-        <i style="font-size:12px;">... Une seule page html, limitez le nombre de clics, (plus de 200 rapports à corriger chaque semaine)</i>
+        <i style="font-size:12px;">... Une seule page html, limitez le nombre de clics, (plus de 200 rapports Ã  corriger chaque semaine)</i>
     
 </body>
 </html>
